--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tinymce/tinymce-react": "^6.3.0",
     "audit": "^0.0.6",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
@@ -27,6 +30,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.10.4",
     "sanitize-html": "^2.17.0",
+    "tailwind-merge": "^3.4.0",
     "tinymce": "^8.3.0",
     "xlsx": "^0.18.5"
   },
@@ -38,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
