--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "app/dashboard/page.js", "proxy.ts", "app/change-password/page.js", "app/dashboard/components/DatePicker.js", "app/dashboard/components/SalesSummary.js", "app/dashboard/SalesSummary.js"  ],
+, "app/dashboard/page.tsx", "proxy.ts", "app/change-password/page.tsx", "app/dashboard/components/DatePicker.tsx", "app/dashboard/components/SalesSummary.tsx", "app/dashboard/SalesSummary.tsx"  ],
   "exclude": ["node_modules"]
 }
